// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clip.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>
    123
    456
    789



=====================================output=====================================
>
  123 456 789

================================================================================
`;

exports[`clip.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>
    123
    456
    789



=====================================output=====================================
>
  123
  456
  789

================================================================================
`;

exports[`indent.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>2-
    123
   456
  789



=====================================output=====================================
>2-
    123
   456
  789

================================================================================
`;

exports[`indent.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>2-
    123
   456
  789



=====================================output=====================================
>2-
    123
   456
  789

================================================================================
`;

exports[`keep.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>+
    123
    456
    789



=====================================output=====================================
>+
  123 456 789



================================================================================
`;

exports[`keep.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>+
    123
    456
    789



=====================================output=====================================
>+
  123
  456
  789



================================================================================
`;

exports[`map.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0

=====================================output=====================================
a: >
  123 456 789
b: >1
    123
   456
  789
d: >
  123 456 789

c: 0

================================================================================
`;

exports[`map.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0

=====================================output=====================================
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0

================================================================================
`;

exports[`middle-comment.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
!!str #comment
>
  123

=====================================output=====================================
!!str #comment
>
  123

================================================================================
`;

exports[`middle-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!str #comment
>
  123

=====================================output=====================================
!!str #comment
>
  123

================================================================================
`;

exports[`middle-comments.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
!!str # comment 1
# comment 2
>
  123

=====================================output=====================================
!!str
# comment 1
# comment 2
>
  123

================================================================================
`;

exports[`middle-comments.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!str # comment 1
# comment 2
>
  123

=====================================output=====================================
!!str
# comment 1
# comment 2
>
  123

================================================================================
`;

exports[`newline.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0

=====================================output=====================================
- >+
  123 456 789

  123 456 789


  123 456 789


- >2+
  123 456 789

  123 456 789


  123 456 789

- 0

================================================================================
`;

exports[`newline.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0

=====================================output=====================================
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0

================================================================================
`;

exports[`newline-unaligned.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6

=====================================output=====================================
>
  1 2
    3
    4
  5 6

  1 2
    3
    4
  5 6


  1 2
    3
    4
  5 6

  1 2

    3
    4

  5 6

================================================================================
`;

exports[`newline-unaligned.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6

=====================================output=====================================
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6

================================================================================
`;

exports[`props.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
!!str &anchor >
  123

=====================================output=====================================
!!str &anchor >
  123

================================================================================
`;

exports[`props.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!str &anchor >
  123

=====================================output=====================================
!!str &anchor >
  123

================================================================================
`;

exports[`props-in-map.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
a: !!str &anchor >
  123

=====================================output=====================================
a: !!str &anchor >
  123

================================================================================
`;

exports[`props-in-map.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!str &anchor >
  123

=====================================output=====================================
a: !!str &anchor >
  123

================================================================================
`;

exports[`prose.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
> 
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789

=====================================output=====================================
>
  123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123
  456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456
  789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789
---
>
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789

================================================================================
`;

exports[`prose.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
> 
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789

=====================================output=====================================
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
>
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789

================================================================================
`;

exports[`seq.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- >
  123
  456
  789
- >1
    123
   456
  789
- 0

=====================================output=====================================
- >
  123 456 789
- >1
    123
   456
  789
- 0

================================================================================
`;

exports[`seq.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- >
  123
  456
  789
- >1
    123
   456
  789
- 0

=====================================output=====================================
- >
  123
  456
  789
- >1
    123
   456
  789
- 0

================================================================================
`;

exports[`strip.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>-
    123
    456
    789



=====================================output=====================================
>-
  123 456 789

================================================================================
`;

exports[`strip.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>-
    123
    456
    789



=====================================output=====================================
>-
  123
  456
  789

================================================================================
`;

exports[`trailing-comment.yml - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
a: !!str > # hello
  hello

=====================================output=====================================
a: !!str > # hello
  hello

================================================================================
`;

exports[`trailing-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!str > # hello
  hello

=====================================output=====================================
a: !!str > # hello
  hello

================================================================================
`;
